--- a/mod3-sol/css/styles.css
+++ b/mod3-sol/css/styles.css
@@ -75,7 +75,7 @@ header > nav.navbar-default {
 
 
 @media (max-width: 767px){
-    .row .col-sm-12{
+    .row .col-xs-12{
         padding-right: 50px;
         padding-left: 50px;
     }
