--- a/mod3-sol/css/styles.css
+++ b/mod3-sol/css/styles.css
@@ -74,10 +74,19 @@ header > nav.navbar-default {
 }
 
 
-@media (max-width: 767px){
+@media (min-width:351px) and (max-width: 767px){
     .row .col-xs-12{
         padding-right: 50px;
         padding-left: 50px;
     }
 }
+
+
+@media (max-width: 350px){
+    .row .col-xs-12{
+        padding-right: 15px;
+        padding-left: 1 5px;
+    }
+}
+
 
